--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-1009.7KB/s(Youtube:不良林), server: node-jp-c-01.texo.network, port: 8443, type: trojan, password: 91fc891c-510f-3a1b-aa77-9bee2c759522, sni: node-jp-c-01.texo.network, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-1.09MB/s(Youtube:不良林), server: 140.238.42.147, port: 11188, type: vmess, uuid: 798550eb-c374-4113-b0d5-530e7d4ddedc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hello, ws-headers: {Host: 140.238.42.147}}
-  - {name: 🇨🇦 加拿大-515.3KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-594.2KB/s(Youtube:不良林), server: 38.143.66.20, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
-  - {name: 🇫🇷 法国-881.2KB/s(Youtube:不良林), server: 51.195.35.134, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/273213070933, ws-headers: {Host: 51.195.35.134}}
+  - {name: 🇸🇬 新加坡-163.7KB/s(Youtube:不良林), server: 8.219.49.108, port: 35829, type: vmess, uuid: aaca3cd9-db04-4668-cbfe-53c43d33ab19, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇨🇳 中国-459.6KB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-210.3KB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-236.2KB/s(Youtube:不良林), server: 196.247.59.154, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇷🇺 俄罗斯联邦-315.0KB/s(Youtube:不良林), server: 176.119.156.229, port: 852, type: vmess, uuid: 82c73cff-ade4-41a5-a33c-c6f6a7f6f533, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: 176.119.156.229}}
+  - {name: 🇺🇸 美国-777.0KB/s(Youtube:不良林), server: 38.143.66.20, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
+  - {name: 🇷🇺 俄罗斯联邦-417.4KB/s(Youtube:不良林), server: 176.119.156.229, port: 852, type: vmess, uuid: 35b021ff-cf42-4b32-aeb7-4f634363df40, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: 176.119.156.229}}
   - {name: 🇨🇳 中国-338.3KB/s(Youtube:不良林), server: best03.downloadmovie.cn, port: 65093, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best03.downloadmovie.cn}}
   - {name: 🇺🇸 美国-706.3KB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-283.3KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65078, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-217.7KB/s(Youtube:不良林), server: 120.233.150.146, port: 65066, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
+  - {name: 🇨🇳 中国-366.5KB/s(Youtube:不良林), server: best03.downloadmovie.cn, port: 65066, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best03.downloadmovie.cn}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-1009.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.09MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-515.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-594.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-881.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-163.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-459.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-210.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-236.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-315.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-777.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-417.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-338.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-706.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-283.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-217.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-366.5KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-1009.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.09MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-515.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-594.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-881.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-163.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-459.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-210.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-236.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-315.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-777.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-417.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-338.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-706.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-283.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-217.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-366.5KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-1009.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.09MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-515.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-594.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-881.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-163.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-459.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-210.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-236.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-315.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-777.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-417.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-338.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-706.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-283.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-217.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-366.5KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-1009.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.09MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-515.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-594.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-881.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-163.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-459.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-210.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-236.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-315.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-777.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-417.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-338.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-706.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-283.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-217.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-366.5KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-1009.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.09MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-515.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-594.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-881.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-163.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-459.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-210.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-236.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-315.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-777.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-417.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-338.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-706.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-283.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-217.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-366.5KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-1009.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.09MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-515.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-594.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-881.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-163.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-459.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-210.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-236.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-315.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-777.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-417.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-338.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-706.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-283.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-217.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-366.5KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-1009.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.09MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-515.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-594.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-881.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-163.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-459.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-210.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-236.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-315.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-777.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-417.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-338.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-706.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-283.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-217.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-366.5KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
