--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,68 +5,67 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇸🇬 新加坡-3.23MB/s(Youtube:不良林), server: 47.241.220.160, port: 28475, type: vmess, uuid: 5b00ad6f-bc33-4946-8a32-b7e59620e935, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-3.79MB/s(Youtube:不良林), server: 20.89.230.23, port: 48090, type: vmess, uuid: 6baaeb1e-5dce-49b7-d6f4-b30a9ea3b758, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇷🇺 俄罗斯联邦-315.0KB/s(Youtube:不良林), server: 176.119.156.229, port: 852, type: vmess, uuid: 82c73cff-ade4-41a5-a33c-c6f6a7f6f533, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: 176.119.156.229}}
-  - {name: 🇺🇸 美国-1.11MB/s(Youtube:不良林), server: test.johnnyz.tk, port: 21997, type: vmess, uuid: d27f450c-e9e4-4427-90bf-42020401c1ad, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /johnnyz996, ws-headers: {Host: test.johnnyz.tk}}
-  - {name: 🇭🇰 香港-2.50MB/s(Youtube:不良林), server: 43.129.158.139, port: 20010, type: vmess, uuid: fb2f129a-87de-40f9-ceb9-74ec482e5f88, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.19MB/s(Youtube:不良林), server: 192.161.164.156, port: 40338, type: vmess, uuid: fe20f87d-4e11-4c2a-af6e-5b8bd9927092, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇭🇰 香港-1.36MB/s(Youtube:不良林), server: 43.129.158.202, port: 38009, type: vmess, uuid: 7fe50249-0f9c-42bb-9815-842bec303691, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-256.7KB/s(Youtube:不良林), server: v116.v2dns.bar, port: 80, type: vmess, uuid: c97cf46e-1554-36cb-8b36-c3556b883dc4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v116-DtoEwAEX, ws-headers: {Host: v116.v2dns.bar}}
+  - {name: 🇸🇬 新加坡-295.7KB/s(Youtube:不良林), server: 8.219.10.137, port: 11070, type: vmess, uuid: 0431f60c-99b1-44f9-c656-f88990433c56, alterId: 64, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.99MB/s(Youtube:不良林), server: vr.eseabean.xyz, port: 12860, type: vmess, uuid: f0c28644-eba5-4de7-e9ed-abcf58a657f5, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /media, ws-headers: {Host: vr.eseabean.xyz}}
+  - {name: 🇷🇺 俄罗斯联邦-417.4KB/s(Youtube:不良林), server: 176.119.156.229, port: 852, type: vmess, uuid: 35b021ff-cf42-4b32-aeb7-4f634363df40, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: 176.119.156.229}}
   - {name: 🇨🇳 中国-392.8KB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
   - {name: 🇨🇦 加拿大-491.8KB/s(Youtube:不良林), server: 196.247.59.154, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-289.4KB/s(Youtube:不良林), server: 120.233.150.146, port: 65079, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
+  - {name: 🇨🇳 中国-260.3KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65089, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-260.6KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65091, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-3.23MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.79MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-315.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
       - 🇭🇰 香港-1.36MB/s(Youtube:不良林)
-      - 🇺🇸 美国-256.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-295.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.99MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-417.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-392.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-491.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-289.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-260.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-260.6KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇸🇬 新加坡-3.23MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.79MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-315.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
       - 🇭🇰 香港-1.36MB/s(Youtube:不良林)
-      - 🇺🇸 美国-256.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-295.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.99MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-417.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-392.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-491.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-289.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-260.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-260.6KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-3.23MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.79MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-315.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
       - 🇭🇰 香港-1.36MB/s(Youtube:不良林)
-      - 🇺🇸 美国-256.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-295.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.99MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-417.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-392.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-491.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-289.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-260.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-260.6KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-2.50MB/s(Youtube:不良林)
       - 🇭🇰 香港-1.36MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
@@ -74,47 +73,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇸🇬 新加坡-3.23MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.79MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-315.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
       - 🇭🇰 香港-1.36MB/s(Youtube:不良林)
-      - 🇺🇸 美国-256.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-295.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.99MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-417.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-392.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-491.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-289.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-260.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-260.6KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-3.23MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.79MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-315.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
       - 🇭🇰 香港-1.36MB/s(Youtube:不良林)
-      - 🇺🇸 美国-256.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-295.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.99MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-417.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-392.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-491.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-289.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-260.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-260.6KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-3.23MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.79MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-315.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
       - 🇭🇰 香港-1.36MB/s(Youtube:不良林)
-      - 🇺🇸 美国-256.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-295.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.99MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-417.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-392.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-491.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-289.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-260.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-260.6KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -130,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-3.23MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.79MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-315.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
       - 🇭🇰 香港-1.36MB/s(Youtube:不良林)
-      - 🇺🇸 美国-256.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-295.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.99MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-417.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-392.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-491.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-289.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-260.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-260.6KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
